WIP fix kafka on podman